# HGraphs.jl

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
experiments/: README
experiments/BGL/: main.cpp
hgraphs/: Cargo.toml
hgraphs-core/: Cargo.toml
hgraphs-core/src/: lib.rs
hgraphs-py/: Cargo.toml  pyproject.toml
hgraphs-py/src/: lib.rs
hgraphs/examples/: infinite_hypergraph.rs
hgraphs/src/: lib.rs
hgraphs/src/projections/: bipartite.rs  mod.rs
hgraphs/src/storage/: incidence_matrix.rs  mod.rs
hgraphs_core/: Cargo.toml
hgraphs_core/src/: bfs.rs  lib.rs  main.rs  projections.rs  views.rs
hgraphs_core/src/implementations/: incidence_matrix.rs  mod.rs
hgraphs_core/src/io/: hif.rs  mod.rs
