[package]
authors=["Vinícius Sousa Dutra <dutravinisousa2@usp.br>"]
name = "hgraphs-core"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Core traits for hypergraph data structures"
license = "MIT OR Apache-2.0"
repository="https://github.com/viniciusdutra314/HGraphs.jl"
keywords=["hypergraphs","data-structures"]
readme=false
rust-version="1.85.1"
