[package]
name = "hgraphs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
hgraphs-core = { path = "../hgraphs-core" }
hypergraph = "2.2.0"
jsonschema = "0.46.5"
ndarray = "0.17.2"
petgraph = { version = "0.8.3", default-features = false,features=["unstable"] }
serde = "1.0.228"
serde_json = "1.0.150"

[dev-dependencies]
rustworkx-core = "0.18.0"
